--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -14235,9 +14235,15 @@
         "\n",
         "9.1 User input\n",
         "\n",
-        "9.2 File input output\n",
+        "9.2 File input and output\n",
         "\n",
-        "9.3 Print function"
+        "9.3 Creating a new file\n",
+        "\n",
+        "9.4 Open file with \"with\" option\n",
+        "\n",
+        "9.5 Print function\n",
+        "\n",
+        "9.6 Formatting output from print function"
       ],
       "metadata": {
         "id": "iMOkr-q9dKwM"
@@ -14249,9 +14255,7 @@
         "Note\n",
         "\n",
         "---\n",
-        "Input and output in Python involves reading data from various sources and writing data to various destinations. Pyhton provides several ways to handle input and output. Here are examples of the most commpn methods.\n",
-        "\n",
-        "---"
+        "Input and output in Python involves reading data from various sources and writing data to various destinations. Pyhton provides several ways to handle input and output. Here are examples of the most commpn methods."
       ],
       "metadata": {
         "id": "Qm3dHdq6ILg_"
@@ -14261,17 +14265,45 @@
       "cell_type": "markdown",
       "source": [
         "9.1 User input\n",
-        "---\n",
-        "User input is allowed in Python. The input() method (python 3.6) or raw_input method in python (2.7) can be used.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "Syntax:\n",
-        "\n",
-        "        variable = input( \" Corresponding text for a user \" )"
+        "---"
       ],
       "metadata": {
         "id": "Qww9K1IrvtMy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "User input is allowed in Python. The *input()* method (python 3.6) or raw_input method in python (2.7) can be used."
+      ],
+      "metadata": {
+        "id": "bWEwMeEVf6DG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          variable = input( \" Corresponding text for a user \" )"
+      ],
+      "metadata": {
+        "id": "QqN1v_yef98K"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "vtEC3AqQgGhG"
       }
     },
     {
@@ -14293,11 +14325,27 @@
       "cell_type": "markdown",
       "source": [
         "9.2 File input and output\n",
-        "---\n",
-        "File input and output in Python is a way to read from and write to a file on your loacal machine. Python provides a few methods to work with files. Files in Pyhton can be created, read, appended, ... open() function can be used to work with files in Python. This function takes two parameters: filename and mode.\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "1tFhadtVhsYr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
         "\n",
         "---\n",
-        "        \n",
+        "File input and output in Python is a way to read from and write to a file on your loacal machine. Python provides a few methods to work with files. Files in Pyhton can be created, read, appended, ... open() function can be used to work with files in Python. This function takes two parameters: filename and mode."
+      ],
+      "metadata": {
+        "id": "MJA7WeXcghoh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "        Method (mode) for opening a file:\n",
         "        r - Read - Default value. Opens a file for reading, error if the file does not exist\n",
         "        a - Append - Opens a file for appending, creates the file if it does not exist\n",
@@ -14307,16 +14355,33 @@
         "        In the text or binary modes\n",
         "        \n",
         "        t - Text - Default value. Text mode\n",
-        "        b - Binary - Binary mode (e.g. images)\n",
-        "\n",
-        "Syntax:\n",
-        "\n",
-        "        file = open(\"filename\", \"mode\")\n",
-        "\n",
-        "___"
+        "        b - Binary - Binary mode (e.g. images)"
       ],
       "metadata": {
-        "id": "1tFhadtVhsYr"
+        "id": "91KooKM7gziK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          file = open(\"filename\", \"mode\")"
+      ],
+      "metadata": {
+        "id": "4yTX3QsWgoSg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "JQGBUkVWg7yU"
       }
     },
     {
@@ -14363,22 +14428,10 @@
         "myFirstFile.close()                      # Close the file when you are finished."
       ],
       "metadata": {
-        "id": "ZXnx5l380U6c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b15b9e46-4100-4842-94a1-eda57b541c2d"
+        "id": "ZXnx5l380U6c"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "It is going to the end of a file\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -14408,8 +14461,28 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Creating a new file\n",
+        "9.3 Creating a new file\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "Vp08HtUm1mIo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
         "---\n",
+        "Creating your own file in Python is done using the built-in *open()* function with the appropriate mode. To create and write to a new file, you can use mode 'w' (write) or 'x' (exclusive creation), where 'w' creates the file if it doesn’t exist or overwrites it if it does, while 'x' raises an Error if the file already exists. After opening the file, you can use the *write()* method to insert content into it, and it’s important to close the file afterward using *close()*, or better yet, use a with block to handle the file automatically. For example, with open(\"example.txt\", \"w\") as f: creates a file named example.txt and opens it for writing, ensuring it is properly closed after the block ends."
+      ],
+      "metadata": {
+        "id": "bvSBvJzghNuV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "        Method (mode) for opening a file:\n",
         "        r  - Open   - will open a file for reading;\n",
@@ -14418,7 +14491,32 @@
         "        w  - Write  - will create a file if the specified file does not exist."
       ],
       "metadata": {
-        "id": "Vp08HtUm1mIo"
+        "id": "EzSf_FUQhkXC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          file = open(\"filename.txt\", \"w\")\n",
+        "          file.write(\"Your content goes here\")\n",
+        "          file.close()"
+      ],
+      "metadata": {
+        "id": "b07DZqZGhzQs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "k0hQ1bfqhsJc"
       }
     },
     {
@@ -14474,7 +14572,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Open file with \"with\" option\n",
+        "9.4 Open file with \"with\" option\n",
         "---"
       ],
       "metadata": {
@@ -14484,21 +14582,37 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Description:\n",
+        "Description\n",
         "\n",
         "---\n",
-        "        Using the open() method requires you to use the close() method to close\n",
-        "        the file. \"with\" option allows to open files as it returns a file\n",
-        "        object, which has methods and attributes to manipulate the files.\n",
-        "\n",
-        "---\n",
-        "Syntax:\n",
-        "\n",
-        "        with open(\"myDataFile.txt) as file:\n",
-        "\n"
+        "Using the open() method requires you to use the close() method to close the file. \"with\" option allows to open files as it returns a file object, which has methods and attributes to manipulate the files."
       ],
       "metadata": {
         "id": "QtKPdXsP3maX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          with open(\"filename.txt\", \"w\") as file:\n",
+        "              file.write(\"Your content goes here\")"
+      ],
+      "metadata": {
+        "id": "IxSCO0ZfiO5_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "5zx0JWqritKQ"
       }
     },
     {
@@ -14520,15 +14634,30 @@
     {
       "cell_type": "markdown",
       "source": [
-        "9.3 Print function\n",
-        "---\n",
-        "Print function is usually used for to print python objects as standard output.\n",
+        "9.5 Print function\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "Zk_SMAm04wBR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
         "\n",
         "---\n",
-        "Syntax:\n",
+        "The *print()* function in Python is used to display output to the console. It is one of the most commonly used built-in functions and can print strings, numbers, variables, and even the results of expressions. By default, *print()* separates multiple items with a space and ends the output with a newline character, but this behavior can be customized using the sep and end parameters.\n",
         "\n",
-        "        print(objects, sep, end, file, flush)\n",
-        "\n",
+        "Print function is usually used for to print python objects as standard output!"
+      ],
+      "metadata": {
+        "id": "WV_hk5ANjgPA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "        objects - strings, tuples, lists, etc.\n",
         "        sep - an optional parameter that is used to define a separation.\n",
         "        end - an optional parameter that is used to define an end of a string printed.\n",
@@ -14536,7 +14665,30 @@
         "        flush - an optional boolean parameter setting flushed or buffered output.\n"
       ],
       "metadata": {
-        "id": "Zk_SMAm04wBR"
+        "id": "nJiH1yLtjwr_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          print(objects, sep, end, file, flush)"
+      ],
+      "metadata": {
+        "id": "w2eg7BcAjlL9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "QE90PksUj0lY"
       }
     },
     {
@@ -14644,32 +14796,45 @@
         "    print('End of a file')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DoHFBSLi8_wx",
-        "outputId": "de753511-90b0-41f7-f490-06b8ad7d0e98"
+        "id": "DoHFBSLi8_wx"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3/2/1/End of a file\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Formating output from print() function\n",
-        "---\n",
-        "General syntax is listed for a format placeholder.\n",
+        "9.6 Formating output from print() function\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "RP6FalHu_XVv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
         "\n",
         "---\n",
-        "Syntax:\n",
+        "Formatting output using the *print()* function in Python allows you to display information in a structured and readable way. This can be done using the modulus operator (%), the *format()* method, and the f-strings (formatted string literals).\n",
+        "\n",
+        "The modulus operator (%) for string formatting is an older method in Python that uses placeholders like %s, %d, and %f to insert values into a string. The % operator is placed after the string, followed by the value(s) to be inserted. Common format specifiers include %s for strings, %d for integers, and %.2f for floating-point numbers with two decimal places. This method is similar to C-style formatting and still works in modern Python.\n",
+        "\n",
+        "The *format()* method works similarly with placeholders: print(\"Name: {}, Age: {}\".format(name, age)).\n",
+        "\n",
+        "F-strings *f'{}'* are the most modern and preferred method, introduced in Python 3.7, and allow expressions to be embedded directly in string literals using curly braces, like print(f\"Name: {name}, Age: {age}\"). You can also control the alignment, width, number formatting, and padding of values, making it useful for printing tables, reports, or aligned data. This flexibility makes formatted printing a powerful tool for creating clean, professional output."
+      ],
+      "metadata": {
+        "id": "LHi92oB7kbCU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
         "              \n",
         "             ' %d %s ... %.2f '    %         ( 1, 2, ..., n)\n",
         "            |------------------|   %   |-------------------------|\n",
@@ -14683,10 +14848,23 @@
         "\n",
         "       print(' {key} ... {} n'  .format     (key = value, ...)   )\n",
         "\n",
+        "       \n",
+        "\n",
         "       print(f'{} {} ... {} n' )"
       ],
       "metadata": {
-        "id": "RP6FalHu_XVv"
+        "id": "OXuonUQ5kskL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "2QMduXHgk41c"
       }
     },
     {
