--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -13689,13 +13689,41 @@
       "cell_type": "markdown",
       "source": [
         "8.3 Exception with one error\n",
-        "---\n",
-        " This example shows try: except: block implementation with ZeroDivisionError.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "taCjeqRXstyn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "This example demonstrates the use of a *try: except:* block to handle a ZeroDivisionError in Python. The ZeroDivisionError is raised when a division or modulo operation is performed with zero as the denominator, which is mathematically undefined. By using a *try* block, we can attempt to perform a division operation, and if the denominator is zero, the program will raise the ZeroDivisionError. The *except* block catches the error, preventing the program from crashing, and allows the programmer to display a custom error message or handle the situation in a more controlled manner.\n",
+        "\n",
+        "This approach ensures the program continues running even when such an error occurs."
+      ],
+      "metadata": {
+        "id": "8COVkJPlNngo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          try:\n",
+        "              # Code that might raise a ZeroDivisionError\n",
+        "              check_expression()\n",
+        "          except ZeroDivisionError:\n",
+        "              # Code to handle the ZeroDivisionError\n",
+        "              print(\"Error: Cannot divide by zero.\")"
+      ],
+      "metadata": {
+        "id": "IjqD-kdYN_kG"
       }
     },
     {
@@ -13722,13 +13750,60 @@
       "cell_type": "markdown",
       "source": [
         "8.4 Exception with three errors\n",
-        "---\n",
-        " This example shows try: except: block implementation with ValueError, ZeroDivisionError, and TypeError.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "DzqzMV5-td1F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "This example demonstrates the use of a *try...except...block* to handle multiple types of exceptions: ValueError, ZeroDivisionError, and TypeError. By specifying different *except* blocks for each exception type, the program can handle various errors in a more controlled way. For example, a ValueError may be raised if the input is not a valid number, a ZeroDivisionError occurs when attempting to divide by zero, and a TypeError is triggered when an operation is performed on incompatible data types. This approach allows the program to catch specific errors and provide meaningful error messages, making it easier to debug and maintain."
+      ],
+      "metadata": {
+        "id": "dWshBnfTMi7T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "\n",
+        "---\n",
+        "          try:\n",
+        "              # Code that might raise exceptions\n",
+        "              check_expression()\n",
+        "\n",
+        "          except ValueError:\n",
+        "              # Handle ValueError\n",
+        "              print(\"Handling ValueError\")\n",
+        "\n",
+        "          except ZeroDivisionError:\n",
+        "              # Handle ZeroDivisionError\n",
+        "              print(\"Handling ZeroDivisionError\")\n",
+        "\n",
+        "          except TypeError:\n",
+        "              # Handle TypeError\n",
+        "              print(\"Handling TypeError\")\n"
+      ],
+      "metadata": {
+        "id": "zOQR-0pJM2f_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "aid21lQmNQaj"
       }
     },
     {
@@ -13760,13 +13835,47 @@
       "cell_type": "markdown",
       "source": [
         "8.5 Assertion exception\n",
-        "---\n",
-        " We can make some assumptions on outcome of our code and create an assertion. The assertion is uset for debugging and documenting your code.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "tmtl3cwK43Ct"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The *assert* keyword is used as a debugging aid that tests a condition as a sanity check while the program is running. If the condition evaluates to True, the program continues normally. However, if it evaluates to False, Python raises an AssertionError exception, optionally with a custom message. This is useful during development to catch unexpected conditions early and ensure that the code behaves as expected. Assertions are typically used to verify internal states, inputs, or outputs, and they can be disabled globally when Python is run in optimized mode (using the -O flag), making them a lightweight and effective debugging tool.\n",
+        "\n",
+        "The assertion is uset for debugging and documenting your code!"
+      ],
+      "metadata": {
+        "id": "Y8QPnV2DLrER"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          assert condition, \"Optional error message\""
+      ],
+      "metadata": {
+        "id": "EIMmZqr-L-2q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "-CaNIesfMSrs"
       }
     },
     {
@@ -13821,13 +13930,55 @@
       "cell_type": "markdown",
       "source": [
         "8.6 Exception with else statement\n",
-        "---\n",
-        " Here is the example of an exception with else statement. Everything will be executed for an else statement if any except statement will fail.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "Spwj7Vg68f0_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The *else* block in a *try...except...else* structure is executed only if no exceptions occur in the try block. This allows you to separate the code that should run only when everything goes smoothly from the code that handles exceptions. If an Error is raised and caught by an *except* block, the else block is skipped. Using *else* makes your code cleaner and easier to read by clearly distinguishing between Error handling and successful execution paths. It's particularly useful when you want to run additional logic only when the try block succeeds without errors."
+      ],
+      "metadata": {
+        "id": "vMQXZ4idJnEm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          try:\n",
+        "              # Code that might raise an exception\n",
+        "              check_expression()\n",
+        "\n",
+        "          except ExceptionType as e:\n",
+        "              # Code to handle the exception\n",
+        "              print(\"An error occurred:\", e)\n",
+        "              \n",
+        "          else:\n",
+        "              # Code that runs if no exception occurred\n",
+        "              print(\"Operation successful.\")"
+      ],
+      "metadata": {
+        "id": "mekzKMw8KBtU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "BnmVdyBbKWzF"
       }
     },
     {
@@ -13847,16 +13998,74 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "    result = 10 / 2\n",
+        "except ZeroDivisionError:\n",
+        "    print(\"Division by zero is not allowed.\")\n",
+        "else:\n",
+        "    print(\"The result is:\", result)"
+      ],
+      "metadata": {
+        "id": "GpFOBtc9Ko9w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "8.7 Exception with finally statement\n",
-        "---\n",
-        " Here is the example of an exception with finally keyword. The finally keyword should be placed at the very end of the try: ... except: ... block. Everything will be executed regardless weather other exceptions catch the mistake.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "rKJYtjQ0_N2O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The *finally* keyword in Python is used at the end of a *try...except* block to define a block of code that will always be executed, regardless of whether an exception was raised or caught. This is especially useful for cleanup tasks such as closing files, releasing resources, or resetting variables, ensuring that essential final steps are performed no matter what happens in the try or except blocks. The *finally* block runs even if an exception is not caught, or if a *return* or *break* statement is executed earlier in the *try* or *except* section. By placing finally at the end of the structure, it guarantees reliable execution of critical code regardless of how the preceding blocks behave."
+      ],
+      "metadata": {
+        "id": "Bim1CUn6IGf5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          try:\n",
+        "          # Code that may raise an exception\n",
+        "              check_expression()\n",
+        "          except ExceptionType as e:\n",
+        "\n",
+        "          # Code to handle the exception\n",
+        "              print(\"An error occurred:\", e)\n",
+        "          finally:\n",
+        "        \n",
+        "          # Code that will always run\n",
+        "          cleanup_expression()\n"
+      ],
+      "metadata": {
+        "id": "BsRbsv_AI2DD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "Iyf4HuSYJbGq"
       }
     },
     {
@@ -13881,9 +14090,6 @@
       "cell_type": "markdown",
       "source": [
         "8.8 Exception with raise statement\n",
-        "---\n",
-        " Here is the example of an exception with raise keyword. The raise keyword should be placed within your code if you want to debug and to verify your code.\n",
-        "\n",
         "---"
       ],
       "metadata": {
@@ -13891,9 +14097,45 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The *raise* keyword is used in Python to manually trigger exceptions, allowing you to intentionally stop program execution when certain conditions are met. This is especially useful during development to debug and verify your code by ensuring that specific rules or constraints are enforced. For instance, you might want to raise a Value Error if a function receives a negative number when only positive values are allowed. By inserting raise at the right place in your code, you can generate meaningful exceptions that help identify logic errors early and improve code robustness."
+      ],
+      "metadata": {
+        "id": "AwA2ynSuGlNH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "\n",
+        "          raise ExceptionType(\"Custom error message\")"
+      ],
+      "metadata": {
+        "id": "7qHeTsivG7TV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "0q6NSOc-Hqed"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "def my_number(a):\n",
+        "def myNumber(a):\n",
         "  try:\n",
         "    return 1/a\n",
         "  except:\n",
@@ -13902,13 +14144,13 @@
       "metadata": {
         "id": "WadhmBmmf7mf"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "my_number(0)"
+        "myNumber(0)"
       ],
       "metadata": {
         "id": "_5ZOS8_e4LNC"
@@ -13917,17 +14159,70 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def checkNumber(x):\n",
+        "    if x < 0:\n",
+        "       raise ValueError(\"Negative numbers are not allowed.\")\n",
+        "    print(\"Number is valid.\")\n",
+        "\n",
+        "checkNumber(5)    # Valid\n",
+        "checkNumber(-2)   # Raises ValueError\n"
+      ],
+      "metadata": {
+        "id": "0RXgbSo2HI52"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "8.9 Exception object\n",
-        "---\n",
-        " This example shows try: except: block implementation with objects.\n",
-        " Meaningful error messages can be obtained using this method.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "lRReYAFKuoIW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "This example demonstrates the use of a try-except block with objects to handle errors gracefully and provide meaningful error messages. When performing operations involving objects, such as accessing methods or attributes, errors like AttributeError, TypeError, or ValueError may occur. By enclosing the potentially problematic code within a try block and handling specific exceptions in the except block, the program can catch and respond to these issues without crashing. Additionally, using the exception object (e.g., except Exception as e:) allows the program to print or log the exact error message, giving clear insight into what went wrong, which helps with debugging and improving the user experience."
+      ],
+      "metadata": {
+        "id": "nUaElZSbFnKA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          try:\n",
+        "              # Code that might raise an exception\n",
+        "              object.method()\n",
+        "          except Exception as e:\n",
+        "              # Print or handle the error\n",
+        "              print(\"An error occurred:\", e)\n"
+      ],
+      "metadata": {
+        "id": "m4Zzjck3F9pY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "rmzW62LJGbSC"
       }
     },
     {
@@ -13952,22 +14247,10 @@
         "       print (e)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aBE1NY8oxlaB",
-        "outputId": "f9d0685a-19bc-464a-df3a-1ecf277f1367"
+        "id": "aBE1NY8oxlaB"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "'>' not supported between instances of 'int' and 'str'\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -13978,22 +14261,10 @@
         "  print(e.args)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6Kr7JRbkuInR",
-        "outputId": "eba97606-c7bf-410a-853c-1bf4b36a2fa4"
+        "id": "6Kr7JRbkuInR"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "('I like it',)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -14004,22 +14275,10 @@
         "  print(e.args)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8wXaAJfnIGU9",
-        "outputId": "3265f8f5-7fbe-4226-87ae-19e6e35eeaf8"
+        "id": "8wXaAJfnIGU9"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(\"'<' not supported between instances of 'int' and 'str'\",)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -14030,22 +14289,10 @@
         "  print(e.args)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qYF-VrMeIQt1",
-        "outputId": "8b0483ea-d910-465b-a1dc-ee343a5ded76"
+        "id": "qYF-VrMeIQt1"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "('division by zero',)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
